--- a/sales_system/inventory/templates/inventory/restock_form.html
+++ b/sales_system/inventory/templates/inventory/restock_form.html
@@ -1,7 +1,35 @@
 {% extends 'base.html' %} {% block content %}
-<h2>Restock Item</h2>
-<form method="post">
-  {% csrf_token %} {{ form.as_p }}
-  <button type="submit">Restock</button>
-</form>
+
+<div
+  class="d-flex justify-content-center align-items-center"
+  style="min-height: 75vh"
+>
+  <div class="card shadow rounded-4" style="width: 500px">
+    <div class="card-header bg-success text-white text-center rounded-top-4">
+      <h4 class="mb-0 py-2"><i class="bi bi-arrow-repeat"></i> Restock Item</h4>
+    </div>
+
+    <div class="card-body">
+      <form method="post" novalidate>
+        {% csrf_token %} {% for field in form %}
+        <div class="mb-3">
+          <label for="{{ field.id_for_label }}" class="form-label fw-semibold"
+            >{{ field.label }}</label
+          >
+          {{ field }} {% if field.errors %}
+          <div class="text-danger small">{{ field.errors|striptags }}</div>
+          {% endif %}
+        </div>
+        {% endfor %}
+        <div class="d-grid">
+          <button type="submit" class="btn btn-success">
+            <i class="bi bi-box-arrow-in-down"></i> Restock
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
 {% endblock %}
+<!-- add the particular shop we are restocking  -->
