--- a/inventory/templates/inventory/item_list.html
+++ b/inventory/templates/inventory/item_list.html
@@ -76,6 +76,15 @@
           >
             <i class="bi bi-pencil-square"></i> Edit
           </a>
+
+          {% if user.role == 'admin' %}
+          <form action="{% url 'delete_item' item.id %}" method="post" onsubmit="return confirm('Are you sure you want to delete this item?');">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-sm btn-outline-danger">
+              <i class="bi bi-trash3-fill"></i> Delete
+            </button>
+          </form>
+        {% endif %}
         </td>
         {% endif %}
       </tr>
